crates/toml_edit/tests/snapshots/invalid/ext/table/append-with-dotted-keys-3.stderr
TOML parse error at line 7, column 2
  |
7 | [dependencies]
  |  ^^^^^^^^^^^^
duplicate key
